test/fail/ac/nestedruletypeunknown.app
//nested rule type unknown

application test

define page root() {
}

access control rules

  rule page name()
  {
    true
    rule page dsf()
    {
      true
    }
  }
